--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Remove this if you use the .htaccess -->
         
     </head>
     <body>
-        <h1>CONO SUR PIZZAS</h1>
+        <h1>Cono Sur Pizza's</h1>
         <header>
             <div id="logo"> </div>
             <div id="contentop">
