--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 Remove this if you use the .htaccess -->
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
-        <title>CONO SUR PIZZA </title>
+        <title>Cono Sur Pizza's</title>
         <meta name="description" content="" />
         <meta name="author" content="CONO SUR PIZZAS" />
         <link rel="shortcut icon" href="img/generales/icono.png" type='image/jpeg' />
