--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Remove this if you use the .htaccess -->
                     <div id="eslogan">Cambiando la forma de comer Pizza</div>
                     <div id="marco"><a href="#"><div id="btnpedido">Pedido en línea</div></a></div>
                 </div>
-                <div id="bannertop">banner
+                <div id="bannertop">
                     <div id="slide"> </div>
                     <div id="mosaic-slideshow">
                         <div class="arrow left"> </div>
