avance sobre CSS para la pagina de menup.html, falta arreglar los botones se implemto caracteristicas genericas para q funcionen para cualquier producto asociado

--- a/menup.html
+++ b/menup.html
@@ -26,14 +26,14 @@
                                     <li><a href="">Personalizado</a></li>
                                 </ul>
                             </div>
-                            <div id="titleopc">Clásicos</div>
+                            <h2>Clásicos</h2>
                             <div id="prodcont">
-                                <div id="produc1"></div>
+                                <div id="fotoclasico"></div>
                                 <div id="descprod">Exquisita pizza Clasica con salchicha alemana, salami, queso parmesano,  un suculento toque oregano y ademas con la debida textura para un degustar unico y sin igual.</div>
                             </div>
                             <div id="btnsclasic">
-                                <div id="btnorden" class="btnprod"><a href="" title="orden">Ver Orden</a></div>
-                                <div id="btncomprar" class="btnprod"><a href="" title="compra">Comprar</a></div>
+                                <div  class="btnprod"><a  id="btnorden" href="" title="orden">Ver Orden</a></div>
+                                <div  class="btnprod"><a id="btncomprar" href="" title="compra">Comprar</a></div>
                             </div>
                         </div>    
                     
