--- a/menup.html
+++ b/menup.html
@@ -26,14 +26,14 @@
                                     <li><a href="">Personalizado</a></li>
                                 </ul>
                             </div>
-                            <h2>Clásicos</h2>
+                            <h3>Clásicos</h3>
                             <div id="prodcont">
                                 <div id="fotoclasico"></div>
                                 <div id="descprod">Exquisita pizza Clasica con salchicha alemana, salami, queso parmesano,  un suculento toque oregano y ademas con la debida textura para un degustar unico y sin igual.</div>
                             </div>
-                            <div id="btnsclasic">
-                                <div  class="btnprod"><a  id="btnorden" href="" title="orden">Ver Orden</a></div>
-                                <div  class="btnprod"><a id="btncomprar" href="" title="compra">Comprar</a></div>
+                            <div id="botones">
+                                <div id="btnvorden" class="btnprod"><a  id="btnverorden" href="" title="orden">Ver Orden</a></div>
+                                <div id="btncompa" class="btnprod"><a id="btncomprar" href="" title="compra">Comprar</a></div>
                             </div>
                         </div>    
                     
