probando ajax en capas hijas.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@ Remove this if you use the .htaccess -->
           <script type="text/javascript">
 	
         $(document).ready(function() {        
-            
+            /*alert("llego");*//**aqui controlare la peticion de las capas hijas **/
            $('#menup').click(function(){
 				$("#contenido").load('menup.html');
 				/*$("#side1").load('s2.php');/**/
 				
          });/**/
+		
 		 
 			
         });
@@ -43,9 +44,9 @@ Remove this if you use the .htaccess -->
             <div id="contentop">
                 <div id="opcsup">
                     <div id="eslogan">Cambiando la forma de comer Pizza</div>
-                    <div id="marco"><a href="#"><div id="btnpedido">Pedido en línea</div></a></div>
+                    <div id="marco"><a href="javascript:void(0)"><div id="btnpedido">Pedido en línea</div></a></div>
                 </div>
-                <div id="bannertop">banner
+                <div id="bannertop">
                     <div id="slide"> </div>
                     <div id="mosaic-slideshow">
                         <div class="arrow left"> </div>
@@ -57,9 +58,9 @@ Remove this if you use the .htaccess -->
         <nav>
             <ul>
                 <li><a href="index.html"><div id="conocenos"></div><div class="menuitem2">Conocénos</div></a></li>
-                <li><a href="#" id="menup"><div id="menuu"></div><div class="menuitem2">Menú</div></a></li>
-                <li><a href="#" id="contacto"><div id="contactanos" ></div><div class="menuitem2">Contáctanos</div></a></li>
-                <li><a href="#" id="sugerencia"><div id="sugerencias" ></div><div class="menuitem2">Sugerencias</div></a></li>
+                <li><a href="javascript:void(0)" id="menup"><div id="menuu"></div><div class="menuitem2">Menú</div></a></li>
+                <li><a href="javascript:void(0)" id="contacto"><div id="contactanos" ></div><div class="menuitem2">Contáctanos</div></a></li>
+                <li><a href="javascript:void(0)" id="sugerencia"><div id="sugerencias" ></div><div class="menuitem2">Sugerencias</div></a></li>
             </ul>
         </nav>
         <section id="contenido">
@@ -98,16 +99,16 @@ Remove this if you use the .htaccess -->
                 <div id="fder">
                     <div id="redes">
                         <div class="fredes">
-                            <a  href="#"> <div id="facebook">Síguenos en Facebook</div></a> </div>
-                        <div class="fredes"><a  href="#"><div id="twitter">Síguenos en Twitter</div></a></div>
+                            <a  href="javascript:void(0)"> <div id="facebook">Síguenos en Facebook</div></a> </div>
+                        <div class="fredes"><a  href="javascript:void(0)"><div id="twitter">Síguenos en Twitter</div></a></div>
                     </div>
                     <div id="nav2">
                         <ul>
-                            <li><a href="#">Conócenos</a></li>
-                            <li><a href="#">Menú</a></li>
+                            <li><a href="javascript:void(0)">Conócenos</a></li>
+                            <li><a href="javascript:void(0)">Menú</a></li>
 
-                            <li><a href="#">Contáctanos</a></li>
-                            <li><a href="#">Sugerencias</a></li>
+                            <li><a href="javascript:void(0)">Contáctanos</a></li>
+                            <li><a href="javascript:void(0)">Sugerencias</a></li>
                         </ul>
                     </div>
                 </div>
