--- a/menup.html
+++ b/menup.html
@@ -7,23 +7,22 @@
     <body>
         <div id="barleft">
                             <ul>
-                                <li><a href="">opcion1</a></li>
-                                <li><a href="">opcion2</a></li>
-                                <li><a href="">opcion3</a></li>
-                                <li><a href="">opcion4</a></li>
+                                <li><a href="javascript:void(0)">Normal</a></li>
+                                <li><a href="javascript:void(0)">Vegetariano</a></li>
+                                <li><a href="javascript:void(0)">Jamón y Queso</a></li>                               
                             </ul>
 
                         </div>
                         <div id="opciones">
                             <div id="baropc">
                                 <ul>
-                                    <li><a href="">Clasicos</a></li>
+                                    <li><a href="javascript:void(0)">Clasicos</a></li>
                                     <div class="divisor"></div>
-                                    <li><a href="">Combos</a></li>
+                                    <li><a href="javascript:void(0)">Combos</a></li>
                                     <div class="divisor"></div>
-                                    <li><a href="">Promociones</a></li>
+                                    <li><a href="javascript:void(0)">Promociones</a></li>
                                     <div class="divisor"></div>
-                                    <li><a href="">Personalizado</a></li>
+                                    <li><a href="javascript:void(0)">Personalizado</a></li>
                                 </ul>
                             </div>
                             <h3>Clásicos</h3>
@@ -32,8 +31,8 @@
                                 <div id="descprod">Exquisita pizza Clasica con salchicha alemana, salami, queso parmesano,  un suculento toque oregano y ademas con la debida textura para un degustar unico y sin igual.</div>
                             </div>
                             <div id="botones">
-                                <div id="btnvorden" class="btnprod"><a  id="btnverorden" href="" title="orden">Ver Orden</a></div>
-                                <div id="btncompa" class="btnprod"><a id="btncomprar" href="" title="compra">Comprar</a></div>
+                                <div id="btnvorden" class="btnprod"><a  id="btnverorden" href="javascript:void(0)" title="orden">Ver Orden</a></div>
+                                <div id="btncompa" class="btnprod"><a id="btncomprar" href="javascript:void(0)" title="compra">Comprar</a></div>
                             </div>
                         </div>    
                     
