agregando codigo java para controlar ajax de las capas hijas

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Remove this if you use the .htaccess -->
           <script type="text/javascript">
 	
         $(document).ready(function() {        
-            /*alert("llego");*//**aqui controlare la peticion de las capas hijas **/
+            /*alert("llego");*//***aqui controlare la peticion de las capas hijas **/
            $('#menup').click(function(){
 				$("#contenido").load('menup.html');
 				/*$("#side1").load('s2.php');/**/
