--- a/sugerencia.html
+++ b/sugerencia.html
@@ -9,15 +9,15 @@
        	<div id="textosugerencia">
 	<h2>Sugerencia</h2>
 	<p>
-		Estimado Cliente, cont&aacute;ctenos y env&iacute;enos sus suerencias para poder mejorar nuestros servicios.<br/>
-		Sus comentarios  y sugerencias son muy importantes para nosotros.
+		Estimado Cliente, cont&aacute;ctenos y env&iacute;enos sus suerencias para poder mejorar nuestros servicios.
+		Sus comentarios  y sugerencias son muy importantes para nosotros.<br/><br/>
 	</p>     
 	</div>  	
 	<div> 
        		<form action="index.html" method="post" accept-charset="utf-8" >
-       			<label class="tituloscampos">Nombre</label><textarea class="campo"></textarea><br /><br/>
-       			<label class="tituloscampos">Correo</label><textarea class="campo"></textarea><br /><br/>
-       			<textarea class="comentario"></textarea><br /><br/>
+       			<label class="tituloscampos">Nombre: </label><textarea class="campo1"> </textarea><br /><br/>
+       			<label class="tituloscampos">Correo: </label><textarea class="campo2"> </textarea><br /><br/>
+       			<textarea class="comentario"> </textarea><br /><br/>
        			<button type="submit">Enviar</button>
        		</form>
        	</div>
