Inicio y Registro Listos

--- a/login.html
+++ b/login.html
@@ -136,12 +136,13 @@ Remove this if you use the .htaccess -->
     	<div id="cuadro">
         	<div id="btnpedido2" onclick="window.location='index.html';">Pedido en línea</div>
         	<div id="cuenta">
-        		<textarea id="usuario">Usuario</textarea>
+        		<div class="triangulo"> </div>
+        		<textarea id="usuario">Correo Electronico</textarea>
         		<textarea id="pass">Contraseña</textarea>
         		<p>¿Olvido su Contraseña?</p>
         		<div id="Iniciar">Iniciar Sesión</div>
         		<div id="registro">
-        			<p>Registrate</p>
+        			<p onclick="window.location='registrate.html';">Registrate</p>
         		</div>
         	</div>
         </div>
