--- a/registrate.html
+++ b/registrate.html
@@ -51,7 +51,7 @@ Remove this if you use the .htaccess -->
     <body>
         <h1>Cono Sur Pizza's</h1>
         <header>
-            <div id="logo" onclick="window.location='index.html';"> </div>
+            <div id="logo"> </div>
                 <div id="opcsup">
                     <div id="eslogan">Cambiando la forma de comer Pizza</div>
                     <div id="btnpedido" onclick="window.location='login.html';">Pedido en línea</div>
@@ -80,7 +80,7 @@ Remove this if you use the .htaccess -->
         <section id="contenido">
             <!-- este es el contenido que se cambiara por ajax-->
             <div id="tituloprin"> <h2>Conocénos</h2> </div>
-            <div id="texto">
+            <div id=texto>
                 <article>
                     <h3> ¿Quiénes Somos?</h3>
                     <p> Somos un grupo de personas dedicadas al descubrimiento de nuevos e interesantes sabores y presentaciones con la finalidad de dar a nuestros comenzales una experiencia unica.</p>
@@ -128,5 +128,25 @@ Remove this if you use the .htaccess -->
                 </div>
             </div>
         </footer>
+        <div id="sesion"> </div>
+    	<div id="cuadro">
+        	<div id="registrate">
+        		<div id="imag"><p>Regístrate</p></div>
+        		<div id="X" onclick="window.location='index.html';">X</div>
+        		<div id="W">Bienvenidos</div>
+        		<textarea class="reg1">Nombre</textarea>
+        		<textarea class="reg2">Apellido</textarea>
+        		<textarea class="reg3">Telefono</textarea>
+        		<textarea class="reg4">País</textarea>
+        		<textarea class="reg5">Estado</textarea>
+        		<textarea class="reg6">Dirección</textarea>
+        		<textarea class="reg7">Correo Electronico</textarea>
+        		<textarea class="reg8">Contraseña</textarea>
+        		<textarea class="reg9">Verificar Contraseña</textarea>
+        		<p>Acepto los Terminos de Uso</p>
+        		<div id="ready">Registrarme</div>
+        		<input id="checkbox" type="checkbox"/>
+        	</div>
+        </div>
     </body>
 </html>
