--- a/combo.html
+++ b/combo.html
@@ -31,14 +31,11 @@
     <body>
         <div id="barleft">
             <ul>
-            	<li><a href="">Normal</a></li>
-                <li><a href="">Carbonara</a></li>
-                <li><a href="">Primavera</a></li>
-                <li><a href="">Especial de Pollo</a></li>
-                <li><a href="">Supremo</a></li>
-                <li><a href="">Bocadillo</a></li>
-                <li><a href="">Supercono</a></li>
-                <li><a href="">Especial Frankfurt</a></li>
+            	<li><a href="">Combo del Dia</a></li>
+                <li><a href="">Combo 2x1</a></li>
+                <li><a href="">Combo Familiar</a></li>
+                <li><a href="">Combo Sabor</a></li>
+                <li><a href="">Combo para niños</a></li>
             </ul>
         </div>
         
@@ -49,7 +46,7 @@
                     <div class="divisor"> </div>
                     <li><a href="#" id="combom">Combos</a></li>
                     <div class="divisor"> </div>
-                    <li><a href="#" id="promom">Promociones</a></li>
+                    <li><a href="" id="promom">Promociones</a></li>
                     <div class="divisor"> </div>
                     <li><a href="">Personalizado</a></li>
                 </ul>
