--- a/sugerencia.html
+++ b/sugerencia.html
@@ -9,8 +9,8 @@
        	<div id="textosugerencia">
 	<h2>Sugerencia</h2>
 	<p>
-		Estimado Cliente, cont&aacute;ctenos y env&iacute;enos sus suerencias para poder mejorar nuestros servicios.
-		Sus comentarios  y sugerencias son muy importantes para nosotros.<br/><br/>
+		Estimado Cliente, cont&aacute;ctenos y env&iacute;enos sus suerencias para poder mejorar nuestros servicios.<br/>
+		Sus comentarios  y sugerencias son muy importantes para nosotros.<br/>
 	</p>     
 	</div>  	
 	<div> 
