--- a/promociones.html
+++ b/promociones.html
@@ -52,7 +52,7 @@
                 </ul>
             </div>
                     
-        	<h4>Clásicos</h4>
+        	<h4>Promociones</h4>
         	<div id="prodcont">
             	<div id="fotoclasico"> </div>
                	<div id="descprod">Exquisita pizza Clasica con salchicha alemana, salami, queso parmesano, un suculento toque oregano y ademas con la debida textura para un degustar unico y sin igual.</div>
