--- a/personalizado.html
+++ b/personalizado.html
@@ -35,16 +35,19 @@
     </head>
 
     <body>
-        <div id="barleft">
+        <div id="barleft2">
             <ul>
-            	<li><a href="">Normal</a></li>
-                <li><a href="">Carbonara</a></li>
-                <li><a href="">Primavera</a></li>
-                <li><a href="">Especial de Pollo</a></li>
-                <li><a href="">Supremo</a></li>
-                <li><a href="">Bocadillo</a></li>
-                <li><a href="">Supercono</a></li>
-                <li><a href="">Especial Frankfurt</a></li>
+            	<li><input class="checkbox2" type="checkbox" />Queso Mozzarella</li>
+                <li><input class="checkbox2" type="checkbox" />Queso Parmesano</li>
+                <li><input class="checkbox2" type="checkbox" />Jamón</li>
+            	<li><input class="checkbox2" type="checkbox" />Pollo</li>
+                <li><input class="checkbox2" type="checkbox" />Salami</li>
+                <li><input class="checkbox2" type="checkbox" />Bocadillo</li>
+                <li><input class="checkbox2" type="checkbox" />Maíz</li>
+                <li><input class="checkbox2" type="checkbox" />Peticuas</li>
+                <li><input class="checkbox2" type="checkbox" />Pimentón</li>
+                <li><input class="checkbox2" type="checkbox" />Champiñones</li>
+                <li><input class="checkbox2" type="checkbox" />Salchicha Frankfurt</li>
             </ul>
         </div>
         
@@ -61,7 +64,7 @@
                 </ul>
             </div>
                     
-        	<h4>Clásicos</h4>
+        	<h4>Personalizado</h4>
         	<div id="prodcont">
             	<div id="fotoclasico"> </div>
                	<div id="descprod">Exquisita pizza Clasica con salchicha alemana, salami, queso parmesano, un suculento toque oregano y ademas con la debida textura para un degustar unico y sin igual.</div>
