--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Remove this if you use the .htaccess -->
         <link rel="shortcut icon" href="img/generales/icono.png" type='image/jpeg' />
         <!-- styles -->
         <link rel="stylesheet" href="styles/style.css" type="text/css">
+        <link rel="stylesheet" type="text/css" href="styles/print.css" media="print"/>
 
         
         <!--SCRIPTS-->
