--- a/registrate.html
+++ b/registrate.html
@@ -168,15 +168,15 @@ Remove this if you use the .htaccess -->
         		<div id="imag"><p>Regístrate</p></div>
         		<div id="X" onclick="window.location='index.html';">X</div>
         		<div id="W">Bienvenidos</div>
-        		<textarea class="reg1">Nombre</textarea>
-        		<textarea class="reg2">Apellido</textarea>
-        		<textarea class="reg3">Telefono</textarea>
-        		<textarea class="reg4">País</textarea>
-        		<textarea class="reg5">Estado</textarea>
+        		<input class="reg1" type="text" value="Nombre">
+        		<input class="reg2" type="text" value="Apellido">
+        		<input class="reg3" type="text" value="Telefono">
+        		<input class="reg4" type="text" value="País">
+        		<input class="reg5" type="text" value="Estado">
         		<textarea class="reg6">Dirección</textarea>
-        		<textarea class="reg7">Correo Electronico</textarea>
+        		<input class="reg7" type="text" value="Correo Electronico">
         		<input class="reg8" type="password" value="Contraseña">
-        		<input class="reg9" type="password" value="Verificar Contraseña">
+        		<input class="reg9" type="password" value="Verificar.">
         		<p>Acepto los Terminos de Uso</p>
         		<div id="ready">Registrarme</div>
         		<input id="checkbox" type="checkbox"/>
