--- a/login.html
+++ b/login.html
@@ -170,16 +170,18 @@ Remove this if you use the .htaccess -->
     	<div id="sesion"> </div>
     	<div id="cuadro">
         	<div id="btnpedido2" onclick="window.location='index.html';">Pedido en línea</div>
-        	<div id="cuenta">
+        	<form name="registro" action="www.facebook.com/login.php" method="post">
+        	<fieldset id="cuenta">
         		<div class="triangulo"> </div>
-        		<textarea id="usuario">Correo Electronico</textarea>
+        		<input id="usuario" type="text" value="Correo Electronico">
         		<input id="pass" type="password" value="Contraseña">
         		<p>¿Olvido su Contraseña?</p>
-        		<div id="Iniciar">Iniciar Sesión</div>
+        		<input id="Iniciar" type="button" value="Iniciar Sesión">
         		<div id="registro">
         			<p onclick="window.location='registrate.html';">Registrate</p>
         		</div>
-        	</div>
+        	</fieldset>
+        	</form>
         </div>
     </body>
 </html>
